fix: delete segment swagger comment
