# internal/app/handler/delete_segment.go
@@ -11,12 +11,12 @@ type DeleteSegmentRequest struct {
 
 // DeleteSegmentHandler godoc
 //
-//	@Summary		Delete segment
-//	@Description	delete segment by name; delete all user_segment entries with the given name
-//	@Tags			segment
-//	@Param 			id path int true "Segment id"
-//	@Success		200	{string}	Status Ok
-//	@Router			/deleteSegment?name={name}} [delete]
+// @Tags segment
+// @Summary Delete segment
+// @Description delete segment by name; delete segment and all user_segment entries with the given segment name
+// @Param name query string true "Segment name"
+// @Success 200 {string} Status Ok
+// @Router /deleteSegment [delete]
 func (h Handler) DeleteSegmentHandler(ctx context.Context, req DeleteSegmentRequest) (*emptyResponse, error) {
 	err := h.service.DeleteSegment(ctx, req.Name)
 	if err != nil {
